--- a/nginx.conf
+++ b/nginx.conf
@@ -1,11 +1,24 @@
 http {
-  types {
-    text/css css;
-    text/html html;
-  }
+  include mime.types;
   server {
     listen 8080;
     root /etc/nginx/templates;
+
+    location /fruits {
+      root /etc/nginx/templates;
+    }
+    location /carbs {
+      alias /etc/nginx/templates/fruits;
+    }
+    location /vegetables {
+      root /etc/nginx/templates;
+      try_files /vegetables/veggies.html /index.html =404;
+    }
+
+    location ~* /count/[0-9] {
+      root /etc/nginx/templates;
+      try_files /index.html =404;
+    }
   }
 }
 
