add rewrite and redirect

--- a/nginx.conf
+++ b/nginx.conf
@@ -4,9 +4,16 @@ http {
     listen 8080;
     root /etc/nginx/templates;
 
+    rewrite ^/number/(\w+) /count/$1;
+
     location /fruits {
       root /etc/nginx/templates;
     }
+
+    location /crops {
+      return 307 /fruits; 
+    }
+
     location /carbs {
       alias /etc/nginx/templates/fruits;
     }
