add load balancing

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,5 +1,12 @@
 http {
   include mime.types;
+
+  upstream backendserver {
+    server nginx-ex1-server1-1:3000;
+    server nginx-ex1-server1-2:3000;
+    server nginx-ex1-server1-3:3000;
+  }
+
   server {
     listen 8080;
     root /etc/nginx/templates;
@@ -25,6 +32,10 @@ http {
     location ~* /count/[0-9] {
       root /etc/nginx/templates;
       try_files /index.html =404;
+    }
+
+    location /rr {
+      proxy_pass http://backendserver/;
     }
   }
 }
