--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,12 @@ services:
       - ./mime.types:/etc/nginx/mime.types
     ports:
       - "8080:8080"
-    environment:
-      - NGINX_HOST=foobar.com
-      - NGINX_PORT=80
+  server1:
+    image: carltonj2000/server
+    volumes:
+      - ./server:/app
+    ports:
+      - "3000-3010:3000"
+    deploy:
+      mode: replicated
+      replicas: 3
